<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My ATM</string>
    <string name="str_insuf_amount">Insufficient Amount</string>
    <string name="str_amount_validation">Entered amount should be greater than 0 and should be divisible by 100</string>
    <string name="str_atm_amount">ATM Amount</string>
    <string name="str_rs">Rs</string>
    <string name="str_withdraw">withdraw</string>
    <string name="str_last_trans">Last  Transactions</string>
    <string name="str_your_trans">Your Transactions</string>
    <string name="str_rs_2000">Rs.2000</string>
    <string name="str_rs_200">Rs.200</string>
    <string name="str_rs_100">Rs.100</string>
    <string name="str_rs_500">Rs.500</string>
    <string name="str_enter_amount">Enter your withdraw amount</string>
    <string name="str_something_went_wrong">Something went wrong</string>
</resources>